# platformdirs

./: .gitignore  .pre-commit-config.yaml  .proselintrc.json  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  appdir.py  appdirs.py  platformdirs.py  pyproject.toml  setup.cfg  setup.py  tox.ini  tox.toml  whitelist.txt
.github/: CODEOWNERS  FUNDING.yaml  FUNDING.yml  SECURITY.md  dependabot.yaml
.github/workflows/: check.yaml  check.yml  packaging.yml  prepare-release.yaml  release.yaml  release.yml  test.yml
docs/: api.rst  changelog.rst  conf.py  explanation.rst  howto.rst  index.rst  parameters.rst  platforms.rst  tutorial.rst  usage.rst
docs/changelog/: 507.bugfix.rst  512.packaging.rst
src/platformdirs/: __init__.py  __main__.py  _xdg.py  android.py  api.py  macos.py  unix.py  windows.py
tasks/: changelog.py
test/: test_api.py
tests/: common.py  conftest.py  test_android.py  test_api.py  test_comp_with_appdirs.py  test_macos.py  test_main.py  test_unix.py  test_user_cache_dir.py  test_windows.py  test_xdg.py  test_xdg_variable_handling.py
