[metadata]
name = platformdirs
description = A small Python module for determining appropriate platform-specific dirs, e.g. a "user data dir".
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/platformdirs/platformdirs
maintainer = Bernát Gábor, Julian Berman, Ofek Lev, Ronny Pfannschmidt
maintainer_email = gaborjbernat@gmail.com, Julian@GrayVines.com, oss@ofek.dev, opensource@ronnypfannschmidt.de
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
keywords = application directory log cache user
project_urls =
    Source=https://github.com/platformdirs/platformdirs
    Tracker=https://github.com/platformdirs/platformdirs/issues
    Documentation=https://platformdirs.readthedocs.io/

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
docs =
    Sphinx>=4.1.1,<5.0.0
    furo>=2021.7.5b38
    proselint>=0.10.2
test =
    appdirs@https://github.com/ActiveState/appdirs/archive/8eacfa312d77aba28d483fbfb6f6fc54099622be.zip
    pytest>=6
    pytest-cov>=2.7

[options.package_data]
platformdirs = py.typed

[flake8]
max-line-length = 120
dictionaries = en_US,python,technical

[coverage:report]
show_missing = True
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$

[coverage:paths]
source =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src

[coverage:run]
branch = true
parallel = true
dynamic_context = test_function
source =
    ${_COVERAGE_SRC}

[coverage:html]
show_contexts = true
skip_covered = false
skip_empty = true

[mypy]
python_version = 3.9

[mypy-jnius.*]
ignore_missing_imports = True
